kustomizeResource/base/service-internal.yaml
apiVersion: v1
kind: Service
metadata:
  name: auto-agent-ui-service-internal
spec:
  type: ClusterIP
  selector:
    name: auto-agent-ui
  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: 3000
