kustomizeResource/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auto-agent-ui-service
spec:
  type: NodePort
  selector:
    name: auto-agent-ui
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
