kustomizeResource/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auto-agent-ui-ingress
  namespace: auto-agent-ui
spec:
  ingressClassName: nginx
  rules:
    - host: auto-agent-ui.ali-netbase.com
      http:
        paths:
          - backend:
              service:
                name: auto-agent-ui-service
                port:
                  number: 80
            path: /
            pathType: Prefix
